kubernetes/backend-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    app: backend
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
