kubernetes/backend-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
spec:
  rules:
    - host: backend-kiko-kixer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backendservice
                port:
                  number: 80
